--- a/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridCellTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridCellTheme.xaml
@@ -12,7 +12,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type DataGridCell}">
-                    <Border Padding="15 0" 
+                    <Border Padding="5 0 0 0" 
                             Background="{TemplateBinding Background}" 
                             SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" 
                             VerticalAlignment="Stretch">
