--- a/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridColumnHeaderTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridColumnHeaderTheme.xaml
@@ -16,8 +16,10 @@
     <Style x:Key="DataGridColumnHeaderStyle1" TargetType="{x:Type DataGridColumnHeader}">
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderBrush" Value="#E0D7D7"/>
+        <Setter Property="BorderThickness" Value="0 0 0 1"/>
         <Setter Property="Foreground" Value="#69717d"/>
-        <Setter Property="Margin" Value="15 0 15 10"/>
+        <Setter Property="Padding" Value="0 0 0 5"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
