--- a/MW5 Mod Oganizer WPF/MainWindow.xaml
+++ b/MW5 Mod Oganizer WPF/MainWindow.xaml
@@ -34,6 +34,7 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
         <!--Taskbar-->
@@ -112,9 +113,9 @@
                 Grid.Row="3" 
                 Background="#f7f5f2" 
                 BorderThickness="0" 
-                Margin="10">
+                Margin="10 10 10 5">
             <DataGrid x:Name="ModList" 
-                      ItemsSource="{Binding Mods}"
+                      ItemsSource="{Binding ModVMCollection}"
                       Style="{DynamicResource DataGridStyle1}" 
                       CellStyle="{DynamicResource DataGridCellStyle1}" 
                       ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
@@ -197,6 +198,28 @@
                 </DataGrid.Columns>
             </DataGrid>
         </Border>
+
+        <StackPanel Grid.Row="4"
+                    Grid.ColumnSpan="2"
+                    Orientation="Horizontal"
+                    Margin="0 0 0 10">
+            <TextBlock Text="Total Mods:"
+                       Foreground="#484D54"
+                       Margin="10 0 0 0"/>
+            <TextBlock Text="{Binding ModCount}"
+                       Foreground="#484D54"
+                       Margin="10 0 0 0"/>
+
+            <Border Background="#484D54"
+                    Width="1"
+                    Margin="10 0"/>
+
+            <TextBlock Text="Active Mods:"
+                       Foreground="#484D54"/>
+            <TextBlock Text="{Binding ModCountActive}"
+                       Foreground="#484D54"
+                       Margin="10 0 0 0"/>
+        </StackPanel>
 
         <!--Header-->
         <Border Grid.Column="0"
@@ -472,7 +495,7 @@
         <!--Add mod-->
         <ContentControl Grid.Column="0"
                         Grid.ColumnSpan="2"
-                        Grid.Row="4">
+                        Grid.Row="5">
             <ContentControl.Style>
                 <Style TargetType="{x:Type ContentControl}">
                     <Style.Triggers>
