Added menu items

--- a/MW5 Mod Oganizer WPF/MainWindow.xaml
+++ b/MW5 Mod Oganizer WPF/MainWindow.xaml
@@ -539,6 +539,21 @@
             <Menu VerticalAlignment="Center"
                   Padding="0 5"
                   Background="Transparent">
+                <MenuItem Header="Profiles"
+                          FontSize="14"
+                          Style="{StaticResource MenuItemContextTheme}">
+                    <MenuItem Header="Create profile..."
+                              FontSize="12"/>
+                    <MenuItem Header="Import profile..."
+                              FontSize="12"/>
+                    <Separator/>
+                    <MenuItem Header="Manage profiles..."
+                              FontSize="12"/>
+                </MenuItem>
+            </Menu>
+            <Menu VerticalAlignment="Center"
+                  Padding="0 5"
+                  Background="Transparent">
                 <MenuItem Header="Help"
                           FontSize="14"
                           Style="{StaticResource MenuItemContextTheme}">
