--- a/MW5 Mod Oganizer WPF/MainWindow.xaml
+++ b/MW5 Mod Oganizer WPF/MainWindow.xaml
@@ -204,8 +204,10 @@
                     Margin="10 0 0 10"
                     HorizontalAlignment="Left">
             <TextBlock Text="Total Mods:"
+                       FontSize="12"
                        Foreground="#484D54"/>
             <TextBlock Text="{Binding ModCount}"
+                       FontSize="12"
                        Foreground="#484D54"
                        Margin="5 0 0 0"/>
 
@@ -214,8 +216,10 @@
                     Margin="10 0"/>
 
             <TextBlock Text="Active Mod(s):"
+                       FontSize="12"
                        Foreground="#484D54"/>
             <TextBlock Text="{Binding ModCountActive}"
+                       FontSize="12"
                        Foreground="#484D54"
                        Margin="5 0 0 0"/>
         </StackPanel>
@@ -225,9 +229,11 @@
                     Margin="0 0 10 10"
                     HorizontalAlignment="Right">
             <TextBlock Text="{Binding SelectedModsCount}"
+                       FontSize="12"
                        Foreground="#484D54"
                        Margin="0 0 5 0"/>
             <TextBlock Text="Selected Mod(s)"
+                       FontSize="12"
                        Foreground="#484D54"/>
             <StackPanel.Style>
                 <Style TargetType="{x:Type StackPanel}">
