--- a/MW5 Mod Oganizer WPF/Views/ProfilesView.xaml
+++ b/MW5 Mod Oganizer WPF/Views/ProfilesView.xaml
@@ -41,7 +41,8 @@
                           Style="{DynamicResource DataGridStyle1}"
                           HorizontalScrollBarVisibility="Disabled"
                           VerticalScrollBarVisibility="Auto"
-                          SizeChanged="ProfilesDataGrid_SizeChanged">
+                          SizeChanged="ProfilesDataGrid_SizeChanged"
+                          IsReadOnly="True">
                     <DataGrid.Columns>
                         <DataGridTextColumn x:Name="ProfilesColumn"
                                             Binding="{Binding Name}"
