--- a/MW5 Mod Oganizer WPF/Views/ProfilesView.xaml
+++ b/MW5 Mod Oganizer WPF/Views/ProfilesView.xaml
@@ -105,7 +105,8 @@
                         Style="{StaticResource ButtonAddModTheme}"
                         Height="30"
                         Grid.Column="0"
-                        Command="{Binding ActivateProfileCommand}"/>
+                        Command="{Binding ActivateProfileCommand}"
+                        CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"/>
                 <Button Content="Delete profile"
                         Style="{StaticResource ButtonAddModTheme}"
                         Height="30"
