Added better intructions to what folder primary folder and secondary folder should be.

--- a/MW5 Mod Oganizer WPF/MainWindow.xaml
+++ b/MW5 Mod Oganizer WPF/MainWindow.xaml
@@ -504,7 +504,7 @@
                          HorizontalAlignment="Left"
                          Margin="10, 0, 0, 0"
                          IsReadOnly="True"
-                         Style="{StaticResource TextBoxTheme}"/>
+                         Style="{StaticResource TextBoxPrimaryPathTheme}"/>
                 <Button x:Name="ButtonOpenFolder" 
                         Content="Open primary folder"
                         Height="25"
@@ -531,7 +531,7 @@
                          VerticalContentAlignment="Center"
                          Margin="10, 0, 0, 0"
                          IsReadOnly="True"
-                         Style="{StaticResource TextBoxTheme}"/>
+                         Style="{StaticResource TextBoxSecondaryPathTheme}"/>
                 <Button x:Name="ButtonOpenSecondaryFolder" 
                         Content="Open secondary folder"
                         Height="25"
