--- a/MW5 Mod Oganizer WPF/Views/ExportProfilesView.xaml
+++ b/MW5 Mod Oganizer WPF/Views/ExportProfilesView.xaml
@@ -29,6 +29,11 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="50" MinHeight="50"/>
             </Grid.RowDefinitions>
+            <TextBlock Text="Select profile(s) to export"
+                       Foreground="#484D54"
+                       FontSize="16"
+                       Margin="0 0 0 5"
+                       Grid.Row="0"/>
             <Grid Grid.Row="1" Background="#f7f5f2">
                 <DataGrid x:Name="ProfilesDataGrid"
                           ItemsSource="{Binding Profiles}"
@@ -40,8 +45,7 @@
                           VerticalScrollBarVisibility="Auto"
                           SizeChanged="ProfilesDataGrid_SizeChanged"
                           SelectionMode="Extended"
-                          SelectionUnit="FullRow"
-                          IsReadOnly="True">
+                          SelectionUnit="FullRow">
                     <DataGrid.Columns>
                         <DataGridTextColumn x:Name="ProfilesColumn"
                                             Binding="{Binding Name}"
